--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,4 +4,4 @@ services:
   nginx:
     image: nginx
     volumes:
-      - nginx/nginx.conf:/etc/nginx/nginx.conf
+      - nginx/conf.d:/etc/nginx/conf.d
