--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,4 +4,4 @@ services:
   nginx:
     image: nginx
     volumes:
-      - nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/conf.d:/etc/nginx/conf.d
