--- a/nginx/conf.d/oracle.conf
+++ b/nginx/conf.d/oracle.conf
@@ -1,11 +1,7 @@
 server {
   listen 80;
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-  }
   location /test/ {
-    proxy_pass http://localhost;
+    proxy_pass http://localhost/a;
   }
 }
