--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -6,5 +6,9 @@ server {
     index  index.html index.htm;
   }
 
+  location /test2/ {
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+  }
   include conf.d/oracle.loc;
 }
