--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,4 +7,12 @@ server {
   }
 
   include conf.d/oracle.loc;
+
+  location /music/{ 
+    proxy_pass http://music.baidu.com/; 
+  }
+  
+  location = /50x.html {
+    root /usr/share/nginx/html;
+  }
 }
