--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,8 @@ version: '3.1'
 services:
   nginx:
     image: nginx
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
+    # volumes:
+    #   - ./nginx/conf.d:/etc/nginx/conf.d
     ports:
       - 80:80
     links:
