--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -44,5 +44,9 @@ server {
 
     location /test/ {
       proxy_pass http://httpd;
+      proxy_http_version 1.1;
+      proxy_set_header X-Forward-For $remote_addr;
+      proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection "upgrade";
     }
 }
