--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -10,13 +10,8 @@ server {
         index  index.html index.htm;
     }
 
-    location /test/ {
-      proxy_pass http://httpd;
-      proxy_http_version 1.1;
-      proxy_set_header X-Forward-For $remote_addr;
-      proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection "upgrade";
-    }
+    include conf.d/oracle.loc
+    
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
