--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -10,8 +10,8 @@ server {
         index  index.html index.htm;
     }
 
-    include conf.d/oracle.loc
-    
+    include conf.d/oracle.loc;
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
