--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,48 +1,31 @@
 server {
-    listen       80;
-    server_name  localhost;
-
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
+    listen 80;
+    server_name dev.lanxinpay.com;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443;
+    server_name  dev.lanxinpay.com;
+
+    ssl on;
+    ssl_certificate /etc/ssl/private/1335392_dev.lanxinpay.com.pem;
+    ssl_certificate_key /etc/ssl/private/1335392_dev.lanxinpay.com.key;
+
+    location / {
+        proxy_pass http://nexus:8081/;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto "https";
     }
 
-    include conf.d/oracle.loc;
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   html;
     }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
-
-    
 }
