--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,19 +2,37 @@ version: '3.1'
 
 volumes:
   nexus-data:
+  gitlab-data:
+  gitlab-log:
 
 services:
   nginx:
     image: nginx
     links:
+      - mt:my
       - nexus:nexus
+      - gitlab:gitlab
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./certs:/etc/ssl/private
     ports:
       - 443:443
       - 80:80
+  mt:
+    build: ./mt
   nexus:
     image: sonatype/nexus3
     volumes:
       - nexus-data:/nexus-data
+    environment:
+      # http://nexus:8081/nexus
+      NEXUS_CONTEXT: nexus
+  gitlab:
+    image: gitlab/gitlab-ce
+    environment:
+      GITLAB_OMNIBUS_CONFIG: |
+        external_url 'http://dev.lanxinpay.com'
+    volumes:
+    - gitlab-data:/var/opt/gitlab:Z
+    - gitlab-log:/var/log/gitlab:Z
+    - ./gitlab/config:/etc/gitlab:Z
