--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -5,25 +5,28 @@ server {
     location / {
         return 301 https://$host$request_uri;
     }
+
+    include conf.d/gitlab.loc;
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name  dev.lanxinpay.com;
 
-    ssl on;
     ssl_certificate /etc/ssl/private/1335392_dev.lanxinpay.com.pem;
     ssl_certificate_key /etc/ssl/private/1335392_dev.lanxinpay.com.key;
 
-    location / {
-        proxy_pass http://nexus:8081/;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto "https";
+    location /mt {
+        return 302 /mt/;
     }
+    
+    location /mt/ {
+        proxy_pass http://mt:8080/;
+    }
+    
+    include conf.d/nexus.loc;
 
+    
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   html;
