--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -23,6 +23,10 @@ server {
     location /mt/ {
         proxy_pass http://mt:8080/;
     }
+
+    location /gitlab {
+        return 301 http://$host$request_uri;
+    }
     
     include conf.d/nexus.loc;
 
